# perspecto

./: LICENSE  README.md  pyproject.toml
src/vizdem/: __init__.py  base.py  cli.py  cpt.py  utils.py
src/vizdem/modules/: colorbar.py  gdal_hillshade.py  geoshade.py  histogram.py  joy.py  shade.py
